# Embodied_Supervisor

./: README.md
backend-api-service/: README.md  pyproject.toml
backend-api-service/src/api/: __init__.py  config.py  deps.py  main.py  schemas.py  service.py
backend-api-service/src/api/guidance/: __init__.py  router.py  service.py
backend-api-service/src/api/ingest/: __init__.py  router.py
backend-api-service/src/api/realtime/: __init__.py  router.py
backend-api-service/tests/: test_api.py
data-access-layer/: README.md  pyproject.toml
data-access-layer/src/data/: __init__.py  models.py  utils.py
data-access-layer/src/data/cache/: __init__.py  session_stream_cache.py
data-access-layer/src/data/object_store/: __init__.py  local_disk.py
data-access-layer/src/data/postgres/: __init__.py  local_repositories.py
data-access-layer/src/data/vector_store/: __init__.py  in_memory.py
data-access-layer/tests/: test_local_repositories.py
docs/: GitHub上传与协作指南.md  embodied_supervisor_module_architecture.html  teammate_a_frontend_edge_guide.tex  teammate_b_backend_data_guide.tex  仓库与目录说明.md  仓库规划说明.md  (+1 more)
edge-client-sdk/: .gitignore  README.md  pyproject.toml
edge-client-sdk/src/edge/: __init__.py
edge-client-sdk/src/edge/capture/: __init__.py  timeline.py
edge-client-sdk/src/edge/context/: __init__.py  models.py  runtime.py  todo.py
edge-client-sdk/src/edge/supervisor/: __init__.py  object_matcher.py  signal_matcher.py  validation.py
edge-client-sdk/src/edge/uplink/: __init__.py  events.py  replay_client.py  robot_packets.py
edge-client-sdk/tests/: test_context_runtime.py  test_matching.py  test_robot_packets.py  test_signal_matching.py  test_uplink.py  test_validation.py
(+34 files in other folders)
